--- a/package.json
+++ b/package.json
@@ -3,13 +3,36 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+     "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@fontsource/hind": "^4.5.10",
+    "@hookform/resolvers": "^2.9.10",
+    "@mui/icons-material": "^5.11.0",
+    "@mui/material": "^5.11.7",
+    "@mui/styled-engine-sc": "^5.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+     "axios": "^1.3.2",
+    "bootstrap": "^5.0.1",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
+     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+     "react-hook-form": "^7.43.0",
+    "react-i18next": "^12.2.0",
+    "react-material-ui-carousel": "^3.4.2",
+    "react-redux": "^8.0.5",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-thunk": "^2.4.2",
+    "styled-components": "^5.3.6",
+    "swiper": "^9.0.5",
+    "web-vitals": "^2.1.4",
+     "yup": "^0.32.11",
+    "yup-phone-lite": "^2.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
