--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "redux-thunk": "^2.4.2",
     "styled-components": "^5.3.6",
     "swiper": "^9.1.0",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11",
     "yup-phone-lite": "^2.0.1"
