--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/styled": "^11.10.5",
     "@fontsource/hind": "^4.5.10",
     "@hookform/resolvers": "^2.9.10",
+    "@iconscout/react-unicons": "^2.0.0",
     "@mui/icons-material": "^5.11.0",
     "@mui/material": "^5.11.7",
     "@mui/styled-engine-sc": "^5.11.0",
