--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
     "redux-thunk": "^2.4.2",
+    "sass": "^1.59.2",
     "styled-components": "^5.3.6",
     "swiper": "^9.1.0",
     "url": "^0.11.0",
